fix some basic displaying, causing some spacing

--- a/styles/base/base.css
+++ b/styles/base/base.css
@@ -44,7 +44,7 @@ html {
 
 body {
   background-image: url("../../assets/images/backgroundv2.jpg");
-  height: 100vh;
+  /*height: 100vh;*/
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -55,6 +55,10 @@ body {
   display: inline-block;
   padding: 10px;
   box-sizing: border-box;
+}
+
+main {
+  height: 100vh;
 }
 
 @media only screen and (min-width: 1440px){
