--- a/styles/components/article.css
+++ b/styles/components/article.css
@@ -8,5 +8,6 @@
     .article {
         padding: 60px;
         border-radius: 50px 50px 0 0;
+        z-index: 0;
     }
 }
