--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -3,7 +3,7 @@
   background-color: var(--footer-bg);
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   width: 100vw;
-  display: inline-block;
+  display: inline-flex;
   padding: 30px 0;
   text-align: center;
 }
@@ -11,6 +11,7 @@
 @media only screen and (min-width: 1440px){
   .footer {
     text-align: left;
+    z-index: 100;
   }
 }
 
